# bmstu-iu7-cg

lab_01/: CMakeLists.txt  main.cpp
lab_01/ui/: Design.cpp  Design.h  MainWindow.cpp  MainWindow.h
lab_01/ui/utils/: ItemDelegate.cpp  ItemDelegate.h
lab_01/ui/widgets/: Canvas.cpp  Canvas.h
lab_01/utils/: DataSet.cpp  DataSet.h  Triangle.cpp  Triangle.h
lab_02/: CMakeLists.txt  main.cpp
lab_02/data/: Instruments.cpp  Instruments.h  RotatableEllipse.cpp  RotatableEllipse.h  Satellite.cpp  Satellite.h  SatelliteBody.cpp  SatelliteBody.h  SatelliteHead.cpp  SatelliteHead.h  SatelliteWings.cpp  SatelliteWings.h
lab_02/ui/: MainWindow.cpp  MainWindow.h  UiMainWindow.h
lab_03/: CMakeLists.txt  main.cpp
lab_03/logic/: datatypes.h
lab_03/logic/line_algs/: bresenham.cpp  bresenham.h  dda.cpp  dda.h  utils.cpp  utils.h  wu.cpp  wu.h
lab_03/logic/mediator/: drawer_mediator.cpp  drawer_mediator.h
lab_03/logic/request/: request.cpp  request.h
lab_03/ui/: MainWindow.cpp  MainWindow.h  design.h
lab_04/: CMakeLists.txt
lab_04/logic/: datatypes.h
lab_04/logic/circle_algs/: bresenham.cpp  bresenham.h  canonical.cpp  canonical.h  midpoint.cpp  midpoint.h  parametric.cpp  parametric.h  utils.cpp  utils.h
lab_04/logic/mediator/: drawer_mediator.cpp  drawer_mediator.h
lab_04/logic/request/: request.cpp  request.h
lab_04/ui/: MainWindow.cpp  MainWindow.h  design.h
lab_05/: main.py  window.ui
lab_06/: main.py  main_3.py  window.ui
lab_07/: design.ui  funcs.py  main.py  simple_cut.py
lab_08/: main.py  win.ui
lab_09/: main.py  win.ui
lab_10/: funcs.py  main.py  win.ui
